<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_core</name>
  <version>0.0.0</version>
  <description>The autoware_core package</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
  <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>

  <license>Apache License 2.0</license>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <exec_depend>autoware_core_control</exec_depend>
  <exec_depend>autoware_core_localization</exec_depend>
  <exec_depend>autoware_core_map</exec_depend>
  <exec_depend>autoware_core_planning</exec_depend>
  <exec_depend>autoware_core_sensing</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
