<?xml version="1.0"?>
<package format="2">
  <name>autoware_version_manager</name>
  <version>0.0.0</version>
  <description>The autoware_version_manager package</description>

  <maintainer email="mfc@leodrive.ai">M. Fatih C覺r覺t</maintainer>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>

  <license>Apache License 2.0</license>

  <author email="mfc@leodrive.ai">M. Fatih C覺r覺t</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>autoware_system_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
