<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_lanelet2_utils</name>
  <version>0.0.0</version>
  <description>The autoware_lanelet2_utils package</description>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <maintainer email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</maintainer>
  <license>Apache License 2.0</license>

  <author email="mamoru.sobue@tier4.jp">Mamoru Sobue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_lanelet2_extension</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>autoware_pyplot</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
