<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_control_center_msgs</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tier4_autoware_utils</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>autoware_control_center</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
