<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_node</name>
  <version>0.2.0</version>
  <description>Autoware Node is an Autoware.Core package designed to provide a base class for all nodes in the system.</description>
  <maintainer email="mfc@autoware.org">M. Fatih Cırıt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
