<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_core_planning</name>
  <version>0.0.0</version>
  <description>The autoware_core_planning package</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
  <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>

  <license>Apache License 2.0</license>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <exec_depend>autoware_behavior_velocity_planner</exec_depend>
  <exec_depend>autoware_behavior_velocity_stop_line_module</exec_depend>
  <exec_depend>autoware_mission_planner</exec_depend>
  <exec_depend>autoware_motion_velocity_obstacle_stop_module</exec_depend>
  <exec_depend>autoware_motion_velocity_planner</exec_depend>
  <exec_depend>autoware_path_generator</exec_depend>
  <exec_depend>autoware_planning_topic_converter</exec_depend>
  <exec_depend>autoware_velocity_smoother</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
