<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_path_generator</name>
  <version>0.0.0</version>
  <description>The autoware_path_generator package</description>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <maintainer email="takayuki.murooka@tier4.jp">Takayuki Murooka</maintainer>
  <maintainer email="mitsuhiro.sakamoto@tier4.jp">Mitsuhiro Sakamoto</maintainer>
  <license>Apache License 2.0</license>

  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>
  <author email="takayuki.murooka@tier4.jp">Takayuki Murooka</author>
  <author email="mitsuhiro.sakamoto@tier4.jp">Mitsuhiro Sakamoto</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_internal_planning_msgs</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_planning_test_manager</depend>
  <depend>autoware_test_utils</depend>
  <depend>autoware_trajectory</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>generate_parameter_library</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
