<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_crop_box_filter</name>
  <version>0.0.0</version>
  <description>The ROS 2 autoware_crop_box_filter package</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</maintainer>
  <maintainer email="dai.nguyen@tier4.jp">Dai Nguyen</maintainer>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>
  <maintainer email="yihsiang.fang@tier4.jp">Yihsiang Fang</maintainer>
  <maintainer email="yoshi.ri@tier4.jp">Yoshi Ri</maintainer>
  <maintainer email="david.wong@tier4.jp">David Wong</maintainer>
  <maintainer email="melike@leodrive.ai">Melike Tanrikulu</maintainer>
  <maintainer email="max.schmeller@tier4.jp">Max Schmeller</maintainer>
  <maintainer email="lxg19892021@gmail.com">Xingang Liu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_point_types</depend>
  <depend>autoware_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
