<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_planning_test_manager</name>
  <version>0.3.0</version>
  <description>ROS 2 node for testing interface of the nodes in planning module</description>
  <maintainer email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</maintainer>
  <maintainer email="takamasa.horibe@tier4.jp">Takamasa Horibe</maintainer>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <maintainer email="junya.sasaki@tier4.jp">Junya Sasaki</maintainer>
  <license>Apache License 2.0</license>

  <author email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_component_interface_specs</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_test_utils</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  <!-- <depend>autoware_component_interface_utils</depend> -->

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
